# room-env

./: .gitignore  README.md  collect_conceptnet.py  collect_conceptnet.yaml  collect_data.py  collect_data.yaml  create_des_config.py  create_des_config.yaml  des-hp-tuning.ipynb  room-env-v1.ipynb  setup.cfg  setup.py
documents/: README-v0.md  README-v1.md
room_env/: __init__.py  des.py  memory.py  policy.py  utils.py
room_env/data/: conceptnet-data.json  des-config-l-v1.json  des-config-l-v2.json  des-config-m-v1.json  des-config-m-v2.json  des-config-s-v1.json  des-config-s-v2.json  des-config-xs-v1.json  des-config-xs-v2.json  des-config-xxs-v1.json  des-config-xxs-v2.json  human-locations  human-names  semantic-knowledge.json  top-human-names-small
room_env/envs/: __init__.py  room.py  room0.py  room1.py  room2.py  utils.py
test/: test_des.py  test_memory.py  test_policy.py  test_room_env_v0.py  test_room_env_v1.py  test_room_env_v2.py  test_utils.py
