[metadata]
name = room_env
version = 0.1.4
author = Taewoon Kim
author_email = tae898@gmail.com
description = The Room environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tae898/room-env
project_urls =
    Bug Tracker = https://github.com/tae898/room-env/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires=
    gym>="0.23.1"
    numpy>="1.21"
    PyYAML>="6.0"
    requests>="2.27.1"
    tqdm>="4.64.0"

[options.package_data]
* = data/*