[metadata]
name = room_env
version = 1.0.1
author = Taewoon Kim
author_email = tae898@gmail.com
description = The Room environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tae898/room-env
project_urls =
    Bug Tracker = https://github.com/tae898/room-env/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires=
    gym>=0.26.1
    torch>=1.12.1
    PyYAML>=6.0
    tqdm

[options.package_data]
* = data/*
